--- a/index.html
+++ b/index.html
@@ -21,14 +21,131 @@
 
   <body>
     
-    <!--
     <header>
+      <!--
       <a href="about/about.html" class="button">[About]</a>
       <a href="https://dhanujg.github.io/" class="button">[Website]</a>
-      <a href="#" class="logo">CHEMICAL HEATMAP</a>
+      -->
+      <a href="#" class="logo">COVID-19 INFORMATION</a>
     </header>
-  -->
-  <!--
+
+    <br>
+    <div class="input-form">
+      What is your age?
+      <div class="card">
+        <select>
+          <option selected disabled>AGE</option>
+          <option>64 or younger</option>
+          <option>65</option>
+          <option>66</option>
+          <option>67</option>
+          <option>68</option>
+          <option>69</option>
+          <option>70</option>
+          <option>71</option>
+          <option>72</option>
+          <option>73</option>
+          <option>74</option>
+          <option>75</option>
+          <option>76</option>
+          <option>77</option>
+          <option>78</option>
+          <option>79</option>
+          <option>80</option>
+          <option>81</option>
+          <option>82</option>
+          <option>83</option>
+          <option>84</option>
+          <option>85</option>
+          <option>86</option>
+          <option>87</option>
+          <option>88</option>
+          <option>89</option>
+          <option>90</option>
+          <option>91</option>
+          <option>92</option>
+          <option>93</option>
+          <option>94</option>
+          <option>95</option>
+          <option>96</option>
+          <option>97</option>
+          <option>98</option>
+          <option>99</option>
+          <option>100+</option>
+        </select>
+      </div>
+      <br>
+      Where do you live?
+      <div class="card">
+        <select>
+          <option selected disabled>STATE</option>
+          <option>ALABAMA</option>
+          <option>ALASKA</option>
+          <option>ARIZONA</option>
+          <option>ARKANSAS</option>
+          <option>CALIFORNIA</option>
+          <option>COLORADO</option>
+          <option>CONNECTICUT</option>
+          <option>DELAWARE</option>
+          <option>FLORIDA</option>
+          <option>GEORGIA</option>
+          <option>HAWAII</option>
+          <option>IDAHO</option>
+          <option>ILLINOIS</option>
+          <option>INDIANA</option>
+          <option>IOWA</option>
+          <option>KANSAS</option>
+          <option>KENTUCKY</option>
+          <option>LOUISIANA</option>
+          <option>MAINE</option>
+          <option>MARYLAND</option>
+          <option>MASSACHUSETTS</option>
+          <option>MICHIGAN</option>
+          <option>MINNESOTA</option>
+          <option>MISSISSIPPI</option>
+          <option>MISSOURI</option>
+          <option>MONTANA</option>
+          <option>NEBRASKA</option>
+          <option>NEVADA</option>
+          <option>NEW HAMPSHIRE</option>
+          <option>NEW JERSEY</option>
+          <option>NEW MEXICO</option>
+          <option>NEW YORK</option>
+          <option>NORTH CAROLINA</option>
+          <option>NORTH DAKOTA</option>
+          <option>OHIO</option>
+          <option>OKLAHOMA</option>
+          <option>OREGON</option>
+          <option>PENNSYLVANIA</option>
+          <option>RHODE ISLAND</option>
+          <option>SOUTH CAROLINA</option>
+          <option>TENNESSEE</option>
+          <option>TEXAS</option>
+          <option>UTAH</option>
+          <option>VERMONT</option>
+          <option>VIRGINIA</option>
+          <option>WASHINGTON</option>
+          <option>WEST VIRGINIA</option>
+          <option>WISCONSIN</option>
+          <option>WYOMING</option>
+        </select>
+      </div>
+      <br>
+      Are you immunocompromised?
+      <div class="card">
+        <select>
+          <option selected disabled>---</option>
+          <option>YES</option>
+          <option>NO</option>
+        </select>
+      </div>
+      <br>
+      <button id="make-heatmap-btn">
+        CLICK HERE TO FIND INFORMATION
+      </button>
+    </div>
+    
+    <!--
     <main class="container">
       <div class="row">
         <div id="left-column" class="col-sm-12 col-md-4">
@@ -37,20 +154,13 @@
             <!--
             <div class="card">
               <div class="input-group vertical section dark">
-                <label for="chemical-name-selector">Choose a chemical:</label>
+                <label for="chemical-name-selector">Choose your age:</label>
                 <select
                   name="chemical-name-selector"
                   id="chemical-name-selector"
                 >
                   <option selected disabled>---</option>
-                </select>
-
-                <label for="chemical-year-selector">Choose a year:</label>
-                <select
-                  name="chemical-year-selector"
-                  id="chemical-year-selector"
-                >
-                  <option selected disabled>---</option>
+                  <option></option>
                 </select>
 
                 <button id="make-heatmap-btn" class="">
