--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </header>
 
     <br>
+    <div id="results"></div>
     <div class="input-form">
       What is your age?
       <div class="card">
@@ -140,9 +141,9 @@
         </select>
       </div>
       <br>
-      <button id="make-heatmap-btn">
+      <button onclick="show_results();" id="make-heatmap-btn">
         CLICK HERE TO FIND INFORMATION
-      </button>
+      </button> 
     </div>
     
     <!--
@@ -214,5 +215,16 @@
       </div>
     </main>
   -->
+  <script>
+    function show_results() {
+      document.getElementById("results").innerHTML = 
+      "<a href='https://www.michigan.gov/Coronavirus'>Coronavirus in Michigan</a><br><br>" +
+      "<a href='https://www.michigan.gov/coronavirus/0,9753,7-406-98163_98173---,00.html'>COVID-19 Cases by Michigan County</a><br><br>" +
+      "<a href='https://www.michigan.gov/coronavirus/0,9753,7-406-98178_103214_104822---,00.html'>Michigan Vaccination Locations</a><br><br>" +
+      "<a href='https://detroitmi.gov/departments/detroit-health-department/programs-and-services/communicable-disease/coronavirus-covid-19'>" +
+        "COVID-19 in Detroit</a><br><br>" +
+      "<a href='https://www.cdc.gov/aging/covid19-guidance.html'>COVID-19 Guidance for Older Adults</a>";
+    }
+  </script>
   </body>
 </html>
