--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!-- TODO: change title to better title lol-->
-    <title>Chemical Contamination Heatmap</title>
+    <title>COVID-19 Information</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8" />
