--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
   <!-- Makes everything on website run, like linking dropdowns and buttons to heatmap/infobox/zipcode modal  -->
-  <script src="main/main/js/index.js" type="module" async defer></script>
+  <script src="main/js/index.js" type="module" async defer></script>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
