--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <div id="results">
       <div v-if="haveState">
         <p style="font-weight:bolder; color:yellowgreen">{{covidData.state}}'s current COVID status:</p>
-        <p>Today's New Cases: {{covidDataToday.todayCases}} <img v-if="covidDataToday.todayCases > covidData.todayCases" src="/main/images/up-xxl.png"> <img v-else src="main/images/Green-down-Arrow.svg.png"></p>
-        <p>Today's Deaths: {{covidDataToday.todayDeaths}} <img v-if="covidDataToday.todayCases > covidData.todayCases" src="/main/images/up-xxl.png"> <img v-else src="main/images/Green-down-Arrow.svg.png"></p>
-        <p>Current Active Cases: {{covidDataToday.active}} <img v-if="covidDataToday.todayCases > covidData.todayCases" src="/main/images/up-xxl.png"> <img v-else src="main/images/Green-down-Arrow.svg.png"></p>
+        <p>Yesterday's New Cases: {{covidData.todayCases}} <img v-if="covidDataToday.todayCases < covidData.todayCases" src="main/images/up-xxl.png"> <img v-else src="main/images/Green-down-Arrow.svg.png"></p>
+        <p>Yesterday's Deaths: {{covidData.todayDeaths}} <img v-if="covidDataToday.todayCases < covidData.todayCases" src="main/images/up-xxl.png"> <img v-else src="main/images/Green-down-Arrow.svg.png"></p>
+        <p>Current Active Cases: {{covidDataToday.active}} <img v-if="covidDataToday.todayCases < covidData.todayCases" src="main/images/up-xxl.png"> <img v-else src="main/images/Green-down-Arrow.svg.png"></p>
         <br>
         <hr>
         <p style="font-weight:bold; color:yellowgreen">Additional Resources:</p>
